# cargo-teaclave

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs
src/: clean.rs  enclave.config.xml  enclave.edl  main.rs  teaclave-build.toml  teaclave-test.rs  teaclave-test.toml  utils.rs  vendor.config
src/test/: build.rs  mod.rs  run.rs
